cabal-version: 2.2
name:
  contiguous-bogo
version:
  0.1
synopsis:
  package i wrote to annoy @andrewthad
description:
  package i wrote to annoy @andrewthad
homepage:
  https://github.com/chessai/contiguous-bogo
bug-reports:
  https://github.com/chessai/contiguous-bogo/issues
license:
  BSD-3-Clause
license-file:
  LICENSE
author:
  chessai
maintainer:
  chessai <chessai1996@gmail.com>
copyright:
  © 2019 chessai
category:
  Acme,Utility
build-type:
  Simple
extra-doc-files:
    README.md
  , CHANGELOG.md
tested-with:
  GHC == 8.2.2, GHC == 8.4.4, GHC == 8.6.4

library
  hs-source-dirs:
    src
  exposed-modules:
    Acme.Data.Primitive.Contiguous.Bogo
  build-depends:
    , base >= 4.10.1 && < 4.13
    , contiguous >= 0.3 && < 0.5
    , primitive >= 0.6.4 && < 0.8
    , text >= 1.2 && < 1.3
    , chronos
  ghc-options:
    -Wall
    -O2
  default-language:
    Haskell2010

source-repository head
  type:
    git
  location:
    https://github.com/chessai/contiguous-bogo.git
